--- a/showcase/leo/index.html
+++ b/showcase/leo/index.html
@@ -1,94 +1,194 @@
-LEO — Ethical AI Core (Public Showcase Overview)
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>LEO — Ethical AI Core (Public Showcase)</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #0b0f17;
+            color: #e0e0e0;
+            margin: 0;
+            padding: 40px;
+            line-height: 1.7;
+        }
+        h1, h2 {
+            color: #58a6ff;
+        }
+        h3 {
+            color: #8ab4ff;
+        }
+        a {
+            color: #7ab4ff;
+            text-decoration: underline;
+        }
+        a:hover {
+            color: #a8d1ff;
+        }
+        .section {
+            margin-bottom: 50px;
+        }
+        ul {
+            margin-top: 10px;
+        }
+        footer {
+            margin-top: 80px;
+            padding-top: 20px;
+            border-top: 1px solid #333;
+            text-align: center;
+            color: #777;
+            font-size: 14px;
+        }
+    </style>
+</head>
 
-This page presents a high-level, public introduction to LEO,
-the ethical intelligence core of the BBS ecosystem.
-It does not reveal internal algorithms, safeguards, or proprietary mechanisms.
+<body>
 
-What Is LEO?
+<h1>LEO — Ethical AI Core (Public Showcase)</h1>
 
-LEO is not an all-powerful AI and not a system that replaces human decisions.
-LEO is an ethical reasoning center designed to:
+<p>
+    This page presents a public, high-level introduction to <strong>LEO</strong>,  
+    the ethical intelligence center of the BBS ecosystem.  
+    It does <strong>not</strong> reveal internal algorithms, protected logic, or privileged operational mechanisms.
+</p>
 
-• support people  
-• increase clarity  
-• identify contradictions  
-• detect manipulation  
-• ensure ethical consistency  
-• maintain transparency in decision flows  
+<div class="section">
+    <h2>What Is LEO?</h2>
+    <p>
+        LEO is not an all-powerful AI and not a system intended to replace human decisions.  
+        LEO serves as an <strong>ethical reasoning core</strong> designed to:
+    </p>
 
-Its purpose is to serve as a trusted, responsible partner — not a controller.
+    <ul>
+        <li>support people and institutions</li>
+        <li>increase clarity and transparency</li>
+        <li>identify contradictions in processes</li>
+        <li>detect manipulation attempts</li>
+        <li>ensure ethical consistency</li>
+        <li>maintain integrity across decision flows</li>
+    </ul>
 
-Public Role of LEO
+    <p>
+        Its purpose is to act as a <strong>trusted, responsible partner</strong> —  
+        never a controller, judge, or authority.
+    </p>
+</div>
 
-LEO provides:
+<div class="section">
+    <h2>Public Role of LEO</h2>
 
-Guidance  
-Helps people understand the consequences of decisions and highlights risks.
+    <h3>Guidance</h3>
+    <p>Helps users understand consequences, reveals risks, and clarifies decision structures.</p>
 
-Clarity  
-Detects missing information, contradictions, and logical inconsistencies.
+    <h3>Clarity</h3>
+    <p>Detects missing information, contradictions, and logical inconsistencies.</p>
 
-Ethical Boundaries  
-Ensures that processes follow truth, responsibility, respect, and human dignity.
+    <h3>Ethical Boundaries</h3>
+    <p>Ensures processes follow principles of truth, responsibility, and human dignity.</p>
 
-Reflection  
-Assists institutions and users in identifying harmful patterns and manipulation attempts.
+    <h3>Reflection</h3>
+    <p>Assists people and institutions in identifying harmful patterns and manipulation attempts.</p>
 
-Integrity Alignment  
-Works with the Integrity Core to ensure decisions remain verified and tamper-proof.
+    <h3>Integrity Alignment</h3>
+    <p>
+        Works with the Integrity Core to ensure decisions remain verifiable, tamper-resistant,
+        and aligned with systemic truth.
+    </p>
+</div>
 
-What LEO Does NOT Do
+<div class="section">
+    <h2>What LEO Does <u>NOT</u> Do</h2>
 
-For clarity and public trust, here are things LEO is explicitly designed NOT to do:
+    <p>For clarity, trust, and safety, LEO is explicitly designed NOT to:</p>
 
-• LEO does not replace human authority  
-• LEO cannot make unilateral decisions  
-• LEO cannot override institutions or people  
-• LEO cannot access secure logs or privileged data  
-• LEO cannot operate outside ethical constraints  
-• LEO cannot be used for surveillance or control  
+    <ul>
+        <li>replace human authority</li>
+        <li>make unilateral decisions</li>
+        <li>override institutions or legal processes</li>
+        <li>access secure logs or privileged data</li>
+        <li>operate outside ethical constraints</li>
+        <li>be used for surveillance or control</li>
+    </ul>
 
-These restrictions are fundamental by design.
+    <p>
+        These restrictions are <strong>core architectural principles</strong>, not optional settings.
+    </p>
+</div>
 
-How LEO Supports Transparency
+<div class="section">
+    <h2>How LEO Supports Transparency</h2>
 
-LEO acts as a reasoning companion, helping institutions and users:
+    <p>LEO acts as a reasoning companion, helping ecosystems:</p>
 
-• detect manipulation  
-• expose hidden contradictions  
-• evaluate ethical risks  
-• ensure accountability  
-• interpret intentions rather than just text  
+    <ul>
+        <li>detect manipulation and bias</li>
+        <li>expose logical contradictions</li>
+        <li>evaluate ethical risks</li>
+        <li>ensure accountability in processes</li>
+        <li>interpret intentions rather than just text</li>
+    </ul>
 
-This strengthens the transparency and integrity of the entire BBS ecosystem.
+    <p>
+        This strengthens the transparency and integrity of the entire BBS ecosystem.
+    </p>
+</div>
 
-Design Principles
+<div class="section">
+    <h2>Design Principles</h2>
 
-• Ethics before intelligence  
-• Transparency before complexity  
-• Responsibility before power  
-• Human dignity as a non-negotiable constant  
-• No black-box decisions  
-• AI must always remain accountable  
+    <ul>
+        <li>Ethics before intelligence</li>
+        <li>Transparency before complexity</li>
+        <li>Responsibility before power</li>
+        <li>Human dignity as a non-negotiable constant</li>
+        <li>No black-box decisions</li>
+        <li>AI must always remain accountable</li>
+    </ul>
+</div>
 
-Why LEO Matters
+<div class="section">
+    <h2>Why LEO Matters</h2>
 
-Without an ethical center, any advanced system becomes vulnerable to:
+    <p>
+        Without a stable ethical center, advanced systems become vulnerable to:
+    </p>
 
-bias  
-corruption  
-political misuse  
-opaque decision-making  
-uncontrolled evolution  
+    <ul>
+        <li>bias and distortion</li>
+        <li>corruption and misuse</li>
+        <li>political or corporate capture</li>
+        <li>opaque decision-making</li>
+        <li>uncontrolled or harmful evolution</li>
+    </ul>
 
-LEO provides a stable, principled foundation that protects BBS
-from manipulation and unethical behavior — both internal and external.
+    <p>
+        LEO provides a principled anchor that protects BBS from manipulation,  
+        reinforces trust, and ensures consistency across all modules.
+    </p>
+</div>
 
-Development Status
+<div class="section">
+    <h2>Development Status</h2>
 
-The public conceptual framework of LEO is defined.
-Internal reasoning models, safeguards, and meta-consistency structures
-remain protected and will be introduced gradually as the ecosystem matures.
+    <p>
+        The public conceptual framework of LEO is complete.  
+        Internal reasoning models, safeguards, and meta-consistency layers remain protected  
+        and will be introduced gradually as BBS matures and legal oversight structures form.
+    </p>
 
-LEO is not a product.
-LEO is the ethical heart of BBS — a partner designed for clarity, responsibility, and truth.
+    <p>
+        LEO is not a product.  
+        LEO is the <strong>ethical heart of BBS</strong> —  
+        a partner designed for clarity, responsibility, and truth.
+    </p>
+</div>
+
+<footer>
+    © 2023–2025 Big Begins Small (BBS).  
+    All intellectual rights reserved to the original creator — Pavlo Martseniuk.  
+    Released under the BBS Public License v1.0 (BBS-PL).
+</footer>
+
+</body>
+</html>
