--- a/showcase/integrity/index.html
+++ b/showcase/integrity/index.html
@@ -1,94 +1,205 @@
-BBS Integrity Core — Public Showcase Overview
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>BBS Integrity Core — Public Showcase</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #0b0f17;
+            color: #e0e0e0;
+            margin: 0;
+            padding: 40px;
+            line-height: 1.7;
+        }
+        h1, h2 {
+            color: #58a6ff;
+        }
+        h3 {
+            color: #8ab4ff;
+        }
+        a {
+            color: #7ab4ff;
+            text-decoration: underline;
+        }
+        a:hover {
+            color: #a8d1ff;
+        }
+        .section {
+            margin-bottom: 50px;
+        }
+        ul {
+            margin-top: 10px;
+        }
+        footer {
+            margin-top: 80px;
+            padding-top: 20px;
+            border-top: 1px solid #333;
+            text-align: center;
+            color: #777;
+            font-size: 14px;
+        }
+    </style>
+</head>
 
-The Integrity Core is the heart of transparency in the BBS ecosystem.
-It ensures that every action, decision, correction, and event leaves a clear,
-cryptographically verifiable trace that cannot be erased or altered.
+<body>
 
-This page presents a public, non-technical overview of how the Integrity Core
-functions conceptually — without exposing protected algorithms or internal mechanisms.
+<h1>BBS Integrity Core — Public Showcase Overview</h1>
 
-Purpose of the Integrity Core
+<p>
+    The <strong>Integrity Core</strong> is the foundation of transparency and accountability inside the BBS ecosystem.  
+    It ensures that every action, decision, correction, and event creates a clear,  
+    cryptographically verifiable trace that <strong>cannot be erased, hidden, or altered</strong>.
+</p>
 
-The Integrity Core exists to guarantee:
+<p>
+    This page provides a high-level, non-technical overview for the public —  
+    without revealing protected mechanisms, security algorithms, or privileged operational logic.
+</p>
 
-• public accountability  
-• traceable decision flows  
-• protection from corruption  
-• resistance to manipulation  
-• verifiable transparency  
-• immutable historical records  
+<div class="section">
+    <h2>Purpose of the Integrity Core</h2>
 
-It ensures that no individual, institution, or system can quietly rewrite history,
-hide evidence, or perform unauthorized actions.
+    <p>The Integrity Core exists to guarantee:</p>
 
-Core Components (Public Overview)
+    <ul>
+        <li>public accountability</li>
+        <li>traceable and explainable decision flows</li>
+        <li>protection from corruption and manipulation</li>
+        <li>verifiable transparency</li>
+        <li>immutable historical records</li>
+    </ul>
 
-Audit Trail Engine
-Maintains a structured, immutable record of all significant actions across the system.
+    <p>
+        It ensures that no institution or individual can quietly rewrite history,
+        hide evidence, or perform unauthorized actions.
+    </p>
+</div>
 
-Verification Mesh
-Cross-checks events and actions from multiple independent sources to prevent falsification.
+<div class="section">
+    <h2>Core Components (Public Overview)</h2>
 
-Policy & Governance Layer
-Ensures that all actions follow clearly defined ethical, legal, and procedural rules.
+    <h3>Audit Trail Engine</h3>
+    <p>Maintains a structured, immutable record of all significant system actions.</p>
 
-Transparency Portal (Public View)
-Provides a safe, limited window into non-sensitive public data,
-allowing institutions and citizens to verify how processes evolve.
+    <h3>Verification Mesh</h3>
+    <p>
+        Cross-validates events from multiple independent sources,  
+        ensuring that no single actor can falsify data.
+    </p>
 
-Merkle-Based Integrity Chains
-Ensures that historical records remain tamper-proof and cryptographically consistent.
+    <h3>Policy & Governance Layer</h3>
+    <p>
+        Ensures all actions follow established ethical, legal, and procedural rules.
+    </p>
 
-Correction Ledger
-Records errors and corrections without ever deleting original data.
+    <h3>Transparency Portal (Public View)</h3>
+    <p>
+        Provides a safe and limited window into non-sensitive data,  
+        allowing the public to verify process evolution without exposing internal channels.
+    </p>
 
-What the Integrity Core Does NOT Reveal
+    <h3>Merkle-Based Integrity Chains</h3>
+    <p>
+        Protect historical records with cryptographic consistency,  
+        ensuring tamper-proof lineage.
+    </p>
 
-The following elements remain protected for security and legal reasons:
+    <h3>Correction Ledger</h3>
+    <p>
+        Enables transparent correction of errors without ever deleting or overwriting original records.
+    </p>
+</div>
 
-• internal validation algorithms  
-• cryptographic secrets  
-• decision-tree logic  
-• anomaly detection thresholds  
-• internal risk scoring methods  
-• privileged audit logs  
-• secure channels of institutional communication  
+<div class="section">
+    <h2>What the Integrity Core Does NOT Reveal</h2>
 
-These remain internal to prevent abuse, manipulation, or unauthorized tampering.
+    <p>
+        The following elements remain internal for security, safety, and legal reasons:
+    </p>
 
-Design Principles
+    <ul>
+        <li>internal validation algorithms</li>
+        <li>cryptographic secrets and seeds</li>
+        <li>internal anomaly detection thresholds</li>
+        <li>decision-tree logic and governance rules</li>
+        <li>privileged audit trails</li>
+        <li>institutional communication channels</li>
+        <li>risk scoring and escalation models</li>
+    </ul>
 
-• Nothing can be deleted — only corrected transparently  
-• Every significant action must produce a verifiable trace  
-• Power cannot be centralized or hidden  
-• History must remain public, permanent, and tamper-proof  
-• Transparency must never endanger personal or institutional safety  
+    <p>
+        These protected layers prevent system misuse, falsification attempts,  
+        and unauthorized tampering with institutional processes.
+    </p>
+</div>
 
-Why the Integrity Core Matters
+<div class="section">
+    <h2>Design Principles</h2>
 
-Traditional systems allow:
+    <ul>
+        <li>Nothing can be deleted — only corrected transparently</li>
+        <li>Every action must produce a verifiable trace</li>
+        <li>Power cannot be centralized or hidden</li>
+        <li>History must remain permanent and tamper-proof</li>
+        <li>Transparency must never endanger safety or privacy</li>
+    </ul>
+</div>
 
-hidden edits  
-disappearing logs  
-political manipulation  
-rewritten decisions  
-corruption through opacity  
+<div class="section">
+    <h2>Why the Integrity Core Matters</h2>
 
-BBS replaces this with:
+    <p>Traditional systems allow:</p>
 
-immutable history  
-public accountability  
-distributed trust  
-verified records  
-permanent auditability  
+    <ul>
+        <li>hidden edits and disappearing logs</li>
+        <li>political manipulation of records</li>
+        <li>rewriting of decisions after the fact</li>
+        <li>corruption through opaque backchannels</li>
+    </ul>
 
-This creates an ethical foundation where truth becomes structurally protected.
+    <p>BBS replaces these vulnerabilities with:</p>
 
-Development Status
+    <ul>
+        <li>immutable history</li>
+        <li>public accountability</li>
+        <li>distributed trust</li>
+        <li>verified records</li>
+        <li>permanent auditability</li>
+    </ul>
 
-The public conceptual framework of the Integrity Core is complete.
-Technical enforcement details, cryptographic structures, and multi-channel validation
-remain under internal development and will be released gradually
-as legal, safety, and governance requirements mature.
+    <p>
+        This transforms the BBS ecosystem into an environment  
+        where truth becomes structurally protected.
+    </p>
+</div>
 
-The Integrity Core is one of the pillars that makes BBS incorruptible by design.
+<div class="section">
+    <h2>Development Status</h2>
+
+    <p>
+        The conceptual public framework of the Integrity Core is fully defined.  
+        Technical enforcement mechanisms, multi-channel validation logic,  
+        and cryptographic structures remain protected and are under active development.
+    </p>
+
+    <p>
+        As institutional partnerships, legal frameworks, and safety models evolve,  
+        additional non-sensitive layers will be introduced gradually.
+    </p>
+
+    <p>
+        The Integrity Core is one of the pillars that makes BBS  
+        <strong>incorruptible by design</strong>.
+    </p>
+</div>
+
+<footer>
+    © 2023–2025 Big Begins Small (BBS).  
+    All intellectual rights reserved to the original creator — Pavlo Martseniuk.  
+    Released under the BBS Public License v1.0 (BBS-PL).
+</footer>
+
+</body>
+</html>
