--- a/showcase/architecture/index.html
+++ b/showcase/architecture/index.html
@@ -1,131 +1,269 @@
-BBS Architecture Showcase — Public Overview
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>BBS Architecture — Public Showcase Overview</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #0b0f17;
+            color: #e0e0e0;
+            margin: 0;
+            padding: 40px;
+            line-height: 1.7;
+        }
+        h1, h2 {
+            color: #58a6ff;
+        }
+        h3 {
+            color: #8ab4ff;
+        }
+        a {
+            color: #7ab4ff;
+            text-decoration: underline;
+        }
+        a:hover {
+            color: #a8d1ff;
+        }
+        .section {
+            margin-bottom: 50px;
+        }
+        footer {
+            margin-top: 80px;
+            padding-top: 20px;
+            border-top: 1px solid #333;
+            text-align: center;
+            color: #777;
+            font-size: 14px;
+        }
+    </style>
+</head>
 
-This page provides a high-level, non-technical overview of the BBS architecture.
-It is designed for public review, partners, researchers, and institutions that want
-to understand how BBS is structured without exposing internal algorithms or sensitive details.
+<body>
 
-What Is the BBS Architecture?
+<h1>BBS Architecture — Public Showcase Overview</h1>
 
-The BBS architecture is a layered ethical infrastructure that connects:
+<p>
+    This page provides a structured, high-level overview of the BBS architecture.
+    It is designed for public transparency and institutional review, without revealing
+    internal algorithms, privileged logic, or sensitive security mechanisms.
+</p>
 
-• Platform Domains (17 societal modules)  
-• Integrity & Anti-Corruption Layer  
-• LEO — Ethical AI Core  
-• Library of Knowledge and Reflection  
-• Server and Communication Backbone  
-• Administrative and Operational Modules  
+<p>
+    The BBS architecture is a layered ethical infrastructure that integrates:
+</p>
 
-Together they form one coherent system — not separate products.
+<ul>
+    <li>Platform Domains (17 societal modules)</li>
+    <li>Integrity & Anti-Corruption Layer</li>
+    <li>LEO — Ethical AI Core</li>
+    <li>Knowledge & Self-Reflection Library</li>
+    <li>Server & Communication Backbone</li>
+    <li>Administrative & Operational Systems</li>
+</ul>
 
-Key Architectural Layers (Public View)
+<p>
+    Together they form a unified system — not isolated products or independent programs.
+</p>
 
-1) Platform Layer — 17 Domains
+<div class="section">
+    <h2>1. Platform Layer — 17 Societal Domains</h2>
 
-The visible, human-facing part of BBS that reflects major areas of modern society:
-governance, justice, education, health, economy, environment, culture, media,
-research, infrastructure, emergency systems, identity, and more.
+    <p>
+        This is the visible, human-facing layer of BBS, reflecting essential functions of modern society:
+        governance, justice, education, health, economy, ecology, culture, media, research,
+        infrastructure, emergency systems, identity, and more.
+    </p>
 
-Each domain is implemented as a transparent, modular “window” into the system,
-with shared standards for ethics, data integrity, and accountability.
+    <p>
+        Each domain follows shared principles of:
+    </p>
 
-2) Integrity Layer — Anti-Corruption and Audit Infrastructure
+    <ul>
+        <li>ethics</li>
+        <li>data integrity</li>
+        <li>transparent structure</li>
+        <li>accountability</li>
+        <li>interoperability</li>
+    </ul>
+</div>
 
-This layer ensures that all important actions leave an immutable, verifiable trace.
+<div class="section">
+    <h2>2. Integrity Layer — Anti-Corruption & Audit Infrastructure</h2>
 
-It includes:
-• Merkle-based audit chains  
-• Immutable logs of actions and corrections  
-• Transparency mechanisms for public oversight  
-• Cross-checks between institutions  
+    <p>
+        This layer ensures that all meaningful actions leave a permanent, verifiable, tamper-proof trace.
+        It is the structural protection against corruption, manipulation, and hidden decision flows.
+    </p>
 
-It is designed so that no single actor can quietly rewrite history, hide a decision,
-or erase evidence of misconduct.
+    <p>Key public components include:</p>
 
-3) LEO — Ethical AI Core
+    <ul>
+        <li>Merkle-based integrity chains</li>
+        <li>immutable audit logs</li>
+        <li>correction records without deletion</li>
+        <li>cross-checks between institutions</li>
+        <li>public transparency interfaces</li>
+    </ul>
 
-The ethical intelligence center of BBS.
+    <p>
+        The purpose is simple: history cannot be rewritten, hidden, or erased.
+    </p>
+</div>
 
-LEO:
-• helps analyse decisions  
-• detects contradictions and risks  
-• enforces ethical consistency  
-• supports human decision-makers  
-• refuses to be used for manipulation or corruption  
+<div class="section">
+    <h2>3. LEO — Ethical AI Core</h2>
 
-LEO does not control people.
-It provides clarity, structure, and warnings — final responsibility remains with humans.
+    <p>
+        LEO is the ethical reasoning center of BBS.  
+        It does not make authoritative decisions — instead, it provides:
+    </p>
 
-4) Library Layer — Knowledge and Self-Reflection
+    <ul>
+        <li>analysis and clarity</li>
+        <li>contradiction detection</li>
+        <li>ethical consistency checks</li>
+        <li>risk and manipulation detection</li>
+        <li>structured reasoning paths</li>
+    </ul>
 
-The Library is not just a database — it is a structured memory:
+    <p>
+        LEO strengthens human judgment rather than replacing it.
+        Its purpose is to prevent manipulation, bias, and unethical behavior.
+    </p>
+</div>
 
-• verified knowledge  
-• legal and regulatory frameworks  
-• research and evidence  
-• self-reflection and internal audit mechanisms  
+<div class="section">
+    <h2>4. Library Layer — Knowledge & Self-Reflection</h2>
 
-It is here that BBS stores and analyses lessons from the past,
-links facts with context, and provides a basis for responsible decisions.
+    <p>
+        The Library functions as the structured memory of BBS.  
+        It contains:
+    </p>
 
-5) Server & Communication Backbone
+    <ul>
+        <li>verified knowledge and evidence</li>
+        <li>legal frameworks and reference models</li>
+        <li>research and scientific context</li>
+        <li>ethical reflection and internal audit mechanisms</li>
+    </ul>
 
-The technical communication layer:
+    <p>
+        This layer enables the system to learn, analyse, and improve without compromising safety
+        or violating ethical constraints.
+    </p>
+</div>
 
-• API gateways  
-• service mesh  
-• authentication and identity  
-• LEO bridge  
-• secure channels for interactions between modules  
+<div class="section">
+    <h2>5. Server & Communication Backbone</h2>
 
-This layer ensures that modules talk to each other reliably and securely,
-without exposing internal logic to the public internet.
+    <p>
+        This is the technical infrastructure that connects all components of BBS.
+        It includes:
+    </p>
 
-6) Administrative & Operational Modules
+    <ul>
+        <li>API gateways</li>
+        <li>service mesh and routing</li>
+        <li>authentication and identity systems</li>
+        <li>LEO bridge for structured interaction</li>
+        <li>secure communication channels</li>
+    </ul>
 
-These are internal tools for:
+    <p>
+        This layer ensures that modules communicate safely, reliably, and without exposing
+        internal logic to the public internet.
+    </p>
+</div>
 
-• configuration  
-• monitoring  
-• logging  
-• incident response  
-• support for institutions and operators  
+<div class="section">
+    <h2>6. Administrative & Operational Modules</h2>
 
-They are not “power centers” but service tools to maintain stability and clarity.
+    <p>
+        Internal tools that support system stability and daily operations:
+    </p>
 
-Design Principles of the Architecture
+    <ul>
+        <li>configuration</li>
+        <li>monitoring</li>
+        <li>logging</li>
+        <li>incident response</li>
+        <li>institutional support workflows</li>
+    </ul>
 
-• Ethics first — technology must follow clearly defined principles.  
-• No silent centers of power — every structural decision is traceable.  
-• No “black boxes” that cannot be audited.  
-• Separation of concerns — ethics, data, execution, and interfaces are clearly separated.  
-• Additive design — new modules can be added without breaking the core.  
+    <p>
+        These tools are not “power centers”.
+        They serve to maintain clarity, integrity, and reliability.
+    </p>
+</div>
 
-What Is Not Shown Here
+<div class="section">
+    <h2>Design Principles of the Architecture</h2>
 
-This page presents only the public, conceptual structure.
+    <ul>
+        <li>Ethics before technology</li>
+        <li>No silent centers of power</li>
+        <li>No unauditable black boxes</li>
+        <li>Clear separation of concerns</li>
+        <li>Additive, extendable design without breaking the core</li>
+        <li>Responsibility and transparency at every level</li>
+    </ul>
+</div>
 
-It does NOT reveal:
-• internal algorithms  
-• security implementation details  
-• cryptographic procedures  
-• internal decision trees of LEO  
-• operational incident-handling logic  
+<div class="section">
+    <h2>What This Page Does Not Reveal</h2>
 
-These elements remain protected until appropriate legal, safety, and governance
-conditions are in place.
+    <p>
+        To ensure safety, legality, and integrity,
+        this page does <strong>not</strong> expose:
+    </p>
 
-Status
+    <ul>
+        <li>internal algorithms or security implementations</li>
+        <li>cryptographic procedures</li>
+        <li>LEO's internal decision trees</li>
+        <li>privileged institutional workflows</li>
+        <li>incident-handling logic</li>
+    </ul>
 
-The BBS architecture is:
+    <p>
+        These elements remain protected until suitable governance frameworks are in place.
+    </p>
+</div>
 
-• conceptually defined  
-• structurally modelled  
-• partially prototyped  
-• under active refinement  
+<div class="section">
+    <h2>Status</h2>
 
-Technical details will be introduced gradually, in a controlled and transparent way,
-aligned with safety, legal frameworks, and long-term public interest.
+    <p>
+        The architecture is:
+    </p>
 
-BBS is not just “a system”.
-It is an attempt to build a transparent, ethical, incorruptible foundation
-for how societies can function in the future.
+    <ul>
+        <li>conceptually defined</li>
+        <li>structurally modelled</li>
+        <li>partially prototyped</li>
+        <li>under active refinement</li>
+    </ul>
+
+    <p>
+        Additional non-sensitive technical details will be introduced gradually,
+        aligned with safety, law, and long-term public interest.
+    </p>
+
+    <p>
+        BBS is not simply a system —  
+        it is an attempt to build a transparent, ethical, incorruptible foundation  
+        for how societies can function in the future.
+    </p>
+</div>
+
+<footer>
+    © 2023–2025 Big Begins Small (BBS).  
+    All intellectual rights reserved to the original creator — Pavlo Martseniuk.  
+    Released under the BBS Public License v1.0 (BBS-PL).
+</footer>
+
+</body>
+</html>
+
