Revise legal information and document structure
Updated legal.html with new metadata, structure, and content for legal information regarding Fundacja BBS.

--- a/legal/legal.html
+++ b/legal/legal.html
@@ -1,109 +1,79 @@
+<!-- File Path: D:\BBS-09-01-2026\foundation\website\legal\legal.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>BBS — Legal</title>
-  <meta name="description" content="Legal status and documents of BBS — transparency, rules, and ethical policies."/>
-  <link rel="icon" href="/img/favicon.ico"/>
-  <link rel="stylesheet" href="../assets/styles/bbs-theme.css"/>
-  <style>
-    .hero { text-align:center; padding:50px 20px; }
-    .hero h1 { font-size:clamp(26px,5vw,46px); margin-bottom:16px; }
-    section { margin:30px 0; }
-    h2 { margin-bottom:8px; }
-    ul { margin:10px 0 10px 20px; }
-  </style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Legal Information | Fundacja BBS — Better Balance System</title>
+    <meta name="description" content="Official legal information and governance documentation of Fundacja BBS — Better Balance System, registered in Poland." />
+    <link rel="stylesheet" href="../assets/css/main.css" />
 </head>
 <body>
 
-  <!-- Header -->
-  <header class="sticky">
-    <div class="container header-inner">
-      <div class="brand"><span>BBS</span><span class="tag">Docs</span></div>
-      <nav class="top">
-        <a href="../index.html" class="btn">Home</a>
-        <a href="manifesto.html" class="btn">Manifesto</a>
-        <a href="constitution_bbs.html" class="btn">Constitution</a>
-        <a href="legal.html" class="btn primary">Legal</a>
-        <a href="faq.html" class="btn">FAQ</a>
-      </nav>
+<header class="legal-header">
+    <div class="container">
+        <h1>Legal Information</h1>
+        <p>Institutional and regulatory disclosures of Fundacja BBS — Better Balance System</p>
     </div>
-  </header>
+</header>
 
-  <!-- Hero -->
-  <main class="container hero">
-    <h1 class="gradient">Legal Status of BBS</h1>
-    <p class="muted">
-      Legal framework, ethical principles, and transparency of the BBS system.
-    </p>
-    <p class="muted">
-      BBS is currently operating as a conceptual, ethical, and technological framework.
-      It does not constitute a registered legal entity or a binding legal authority.
-      All documents published herein serve as a public governance and compliance model,
-      aligned with European Union fundamental principles and regulations.
-    </p>
-  </main>
+<main class="container legal-content">
 
-  <!-- Content -->
-  <section class="container">
-    <div class="panel">
-      <h2>1. Copyright & Intellectual Property</h2>
-      <p>
-        © 2025 BBS — Big Begins Small. All ideas, projects, modules, and software solutions
-        published on this site or related to the BBS platform are the intellectual property
-        of the BBS initiative and its founder.
-      </p>
-      <p>
-        Any use, reproduction, or distribution must respect applicable intellectual
-        property laws and require prior authorization, except where permitted under
-        European fair use, quotation, academic, or public interest regulations.
-      </p>
+    <section class="legal-identity">
+        <h2>1. Legal Identity</h2>
+        <ul>
+            <li><strong>Full Legal Name:</strong> FUNDACJA BBS — Better Balance System</li>
+            <li><strong>Legal Form:</strong> Foundation (Fundacja)</li>
+            <li><strong>KRS:</strong> 0001220296</li>
+            <li><strong>NIP:</strong> 8741817187</li>
+            <li><strong>REGON:</strong> 543863137</li>
+            <li><strong>Date of Registration:</strong> 30 January 2026</li>
+            <li><strong>Registered Office:</strong> Sienkiewicza 1/4, 87-300 Brodnica, Poland</li>
+        </ul>
+        <p>The Foundation operates under Polish law and is entered into the National Court Register (Krajowy Rejestr Sądowy).</p>
+    </section>
+
+    <section class="legal-governance">
+        <h2>2. Governance Framework</h2>
+        <p>The Foundation acts in accordance with:</p>
+        <ul>
+            <li>The Statute of the Foundation (current version filed with the National Court Register)</li>
+            <li>Polish Act on Foundations</li>
+            <li>Applicable accounting and tax regulations</li>
+            <li>Internal governance resolutions and policies</li>
+        </ul>
+        <p>All operational, financial, and programmatic activities are conducted within the legal scope defined by the Statute and relevant Polish legislation.</p>
+    </section>
+
+    <section class="legal-documents">
+        <h2>3. Legal Documents</h2>
+        <ul>
+            <li><a href="privacy-policy.html">Privacy Policy</a></li>
+            <li><a href="terms-of-use.html">Terms of Use</a></li>
+            <li><a href="statute.html">Statute (Public Extract)</a></li>
+            <li><a href="financial-disclosures.html">Financial Transparency & Reporting</a></li>
+        </ul>
+        <p>All documents are maintained in their current applicable versions. Archived versions are stored internally for audit and historical traceability.</p>
+    </section>
+
+    <section class="compliance">
+        <h2>4. Compliance and Transparency</h2>
+        <p>The Foundation maintains accounting records in accordance with Polish accounting standards and internal financial policies. Public disclosures are made when required by law or institutional policy.</p>
+        <p>For official verification, stakeholders may consult public registry records via the Polish National Court Register.</p>
+    </section>
+
+    <section class="contact">
+        <h2>5. Contact</h2>
+        <p>For legal inquiries, formal correspondence, or regulatory matters, please use the official contact channels published on the main website.</p>
+    </section>
+
+</main>
+
+<footer class="legal-footer">
+    <div class="container">
+        <p>© 2026 Fundacja BBS — Better Balance System. All rights reserved.</p>
     </div>
-
-    <div class="panel">
-      <h2>2. Public Mission & Ethical Principles</h2>
-      <p>
-        BBS is a non-profit humanistic movement. All actions, products, and initiatives
-        are conducted solely for the benefit of society, ethical progress, human dignity,
-        and transparent cooperation.
-      </p>
-      <p>
-        The system cannot be used for manipulation, coercion, unjustified profit,
-        or concentration of power.
-      </p>
-      <p>
-        All automated or algorithmic processes within BBS are subject to human oversight,
-        ethical review, and the right to explanation.
-      </p>
-    </div>
-
-    <div class="panel">
-      <h2>3. Legal Documents</h2>
-      <ul>
-        <li><a href="constitution_bbs.html">Constitution of BBS</a></li>
-        <li><a href="privacy_policy.html">Privacy Policy</a></li>
-        <li><a href="terms_of_use.html">Terms of Use</a></li>
-        <li><a href="ai_policy.html">AI Policy</a></li>
-        <li><a href="copyright.html">Copyright Notice</a></li>
-        <li><a href="security_principles.html">Security Principles</a></li>
-      </ul>
-      <p class="muted">
-        Documents may be updated as the system evolves.
-        All changes are recorded in the <a href="change_log.html">Change Log</a>
-        to ensure transparency and traceability.
-      </p>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <div class="container">© <span id="year"></span> BBS</div>
-  </footer>
-
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
+</footer>
 
 </body>
 </html>
