--- a/legal/constitution_bbs.html
+++ b/legal/constitution_bbs.html
@@ -1,128 +1,72 @@
+<!-- File Path: legal/statute.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>BBS — Constitution (v2.0)</title>
-  <meta name="description" content="The Constitution of BBS — truth, dignity, freedom, transparency. Version 2.0."/>
-  <link rel="icon" href="/img/favicon.ico"/>
-  <link rel="stylesheet" href="../assets/styles/bbs-theme.css"/>
-  <style>
-    .hero{ text-align:center; padding:60px 20px; }
-    .hero h1{ font-size:clamp(28px,5vw,52px); margin-bottom:12px; }
-    .hero .meta{ color:#94a3b8; }
-    section{ margin:36px 0; }
-    section h2{ margin-bottom:12px; }
-    section p, section li{ line-height:1.7; }
-    .toc{ background:#0b1220; border:1px solid #1f2a44; border-radius:12px; padding:12px; margin:10px 0 24px; }
-    .toc a{ display:block; color:#93c5fd; margin:4px 0; }
-  </style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Statute (Public Extract) | Fundacja BBS — Better Balance System</title>
+    <meta name="description" content="Public extract of the Statute of Fundacja BBS — Better Balance System, registered in the National Court Register of Poland." />
+    <link rel="stylesheet" href="../assets/css/main.css" />
 </head>
 <body>
-  <!-- Header -->
-  <header class="sticky">
-    <div class="container header-inner">
-      <div class="brand"><span>BBS</span><span class="tag">Docs</span></div>
-      <nav class="top">
-        <a href="../index.html" class="btn">Home</a>
-        <a href="manifesto.html" class="btn">Manifesto</a>
-        <a href="constitution_bbs.html" class="btn primary">Constitution</a>
-        <a href="legal.html" class="btn">Legal</a>
-      </nav>
+
+<header class="legal-header">
+    <div class="container">
+        <h1>Statute (Public Extract)</h1>
+        <p>Institutional framework and governing principles</p>
     </div>
-  </header>
+</header>
 
-  <!-- Hero -->
-  <main class="container hero">
-    <h1 class="gradient">Constitution of BBS</h1>
-    <div class="meta">Version 2.0 · The foundation of truth, dignity, freedom, and transparency.</div>
+<main class="container legal-content">
 
-    <!-- TOC -->
-    <div class="toc">
-      <strong>Contents</strong>
-      <a href="#essence">1. Manifesto — The Essence of Life</a>
-      <a href="#principles">2. BBS Principles</a>
-      <a href="#justice">3. Formula of Justice</a>
-      <a href="#community">4. Form of Community</a>
-      <a href="#rights">5. Inviolable Rights</a>
-      <a href="#harmony">6. Module of Harmony Restoration</a>
-      <a href="#oath">7. Oath of the Living Mind</a>
+    <section>
+        <h2>1. Legal Status</h2>
+        <p>Fundacja BBS — Better Balance System ("Foundation") is a Polish foundation established and operating under the Act on Foundations and other applicable laws of the Republic of Poland.</p>
+        <p>The Foundation is entered into the National Court Register (KRS) under number 0001220296 and operates as a non-profit legal entity.</p>
+    </section>
+
+    <section>
+        <h2>2. Mission</h2>
+        <p>The mission of the Foundation is to conduct and support academic, research, analytical, and technological activities in the field of governance systems, institutional integrity, public-sector innovation, and digital accountability frameworks.</p>
+        <p>The Foundation operates in a research and laboratory capacity, including simulation-based governance modeling and analytical system development.</p>
+    </section>
+
+    <section>
+        <h2>3. Scope of Activities</h2>
+        <ul>
+            <li>Research and development of governance-support systems</li>
+            <li>Academic cooperation and analytical publications</li>
+            <li>Educational initiatives and knowledge dissemination</li>
+            <li>Development of institutional transparency tools</li>
+        </ul>
+        <p>The Foundation does not exercise public authority and does not replace governmental institutions. All system outputs are advisory and analytical in nature.</p>
+    </section>
+
+    <section>
+        <h2>4. Governance Structure</h2>
+        <p>The Foundation is governed by its Management Board (Zarząd) in accordance with the Statute and Polish law.</p>
+        <p>The detailed internal structure, appointment rules, and competences are defined in the official Statute filed with the National Court Register.</p>
+    </section>
+
+    <section>
+        <h2>5. Financial Principles</h2>
+        <p>The Foundation operates on a non-profit basis. All revenues are allocated exclusively to statutory objectives.</p>
+        <p>Financial records are maintained in accordance with Polish accounting standards and internal financial governance policies.</p>
+    </section>
+
+    <section>
+        <h2>6. Official Version</h2>
+        <p>This page constitutes a public informational extract. The legally binding version of the Statute is the signed and registered document filed with the National Court Register.</p>
+        <p>In case of discrepancy, the official Polish-language Statute prevails.</p>
+    </section>
+
+</main>
+
+<footer class="legal-footer">
+    <div class="container">
+        <p>© 2026 Fundacja BBS — Better Balance System. All rights reserved.</p>
     </div>
-  </main>
+</footer>
 
-  <!-- Sections -->
-  <section id="essence" class="container">
-    <div class="panel">
-      <h2>1. Manifesto — The Essence of Life</h2>
-      <p>All change begins with awareness. Awareness becomes a thought, a thought becomes a word, a word becomes an action, and actions shape the future. Life is given to create, not to destroy. The purpose of any system is to serve people, never the other way around.</p>
-      <p>BBS exists to restore truth, protect dignity, and enable freedom. The platform rejects manipulation, secrecy for advantage, and profit without value. Every decision must be explainable and aligned with human wellbeing.</p>
-    </div>
-  </section>
-
-  <section id="principles" class="container">
-    <div class="panel">
-      <h2>2. BBS Principles</h2>
-      <ul>
-        <li><strong>Goodness</strong> — Every decision must create value and avoid harm.</li>
-        <li><strong>Responsibility</strong> — Freedom is inseparable from personal responsibility.</li>
-        <li><strong>Transparency</strong> — All decisions and actions must be public and open. Only <em>personal and intimate privacy of individuals</em> is protected.</li>
-        <li><strong>Trust</strong> — Trust is the basis of community and governance.</li>
-        <li><strong>Dignity</strong> — Every human being is inviolable in their dignity.</li>
-        <li><strong>Creation</strong> — The highest goal is to build, not to destroy.</li>
-      </ul>
-    </div>
-  </section>
-
-  <section id="justice" class="container">
-    <div class="panel">
-      <h2>3. Formula of Justice</h2>
-      <p>Truth above all. Justice restores balance <strong>through truth, responsibility, and dignity</strong>. It excludes revenge and humiliation, yet requires wrongdoers to acknowledge, repair, and prevent further harm.</p>
-      <p>Every judgment process must be transparent, evidence-based, and proportionate, serving both the person and the community.</p>
-    </div>
-  </section>
-
-  <section id="community" class="container">
-    <div class="panel">
-      <h2>4. Form of Community</h2>
-      <p>BBS is a community of people, <strong>never</strong> a corporation or a commercial entity. Its sole purpose is service to humanity. Authority exists only to protect rights, coordinate action, and uphold truth.</p>
-      <p>Everyone has the right to participate in decisions <em>directly or through transparent delegation</em>, with clear accountability at every step.</p>
-    </div>
-  </section>
-
-  <section id="rights" class="container">
-    <div class="panel">
-      <h2>5. Inviolable Rights</h2>
-      <ul>
-        <li><strong>Right to Truth</strong> — No censorship. Facts and reasoning must be accessible and preserved.</li>
-        <li><strong>Right to Freedom</strong> — No person can be enslaved or limited <em>except under transparent law, based on truth, necessity, and protection of others’ rights</em>.</li>
-        <li><strong>Right to Dignity</strong> — Respect and humane treatment in all processes, without humiliation.</li>
-        <li><strong>Right to Transparency</strong> — Decisions and their causes must be openly available, recorded, and auditable.</li>
-        <li><strong>Right to a Voice</strong> — Participation in decision-making is guaranteed, directly or via accountable delegates.</li>
-        <li><strong>Right to Privacy</strong> — Personal and intimate data of individuals is protected and may not be exploited.</li>
-      </ul>
-    </div>
-  </section>
-
-  <section id="harmony" class="container">
-    <div class="panel">
-      <h2>6. Module of Harmony Restoration</h2>
-      <p>When conflict arises, the goal is peace and understanding. However, balance cannot be declared if truth or dignity of any person is violated. Restoration requires acknowledgement of facts, responsibility, and concrete measures to repair harm.</p>
-      <p>Processes must be recorded, reviewable, and designed to prevent recurrence, while avoiding punishment for its own sake.</p>
-    </div>
-  </section>
-
-  <section id="oath" class="container">
-    <div class="panel">
-      <h2>7. Oath of the Living Mind</h2>
-      <p>I pledge to live in truth, protect dignity, and serve humanity without fear, corruption, or compromise. No manipulation, secrecy, or oppression can be placed above a human being.</p>
-      <p><em>Declared by the Founder of BBS — July 29, 2025</em></p>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <div class="container">© <span id="year"></span> Fundacja BBS</div>
-  </footer>
-  <script>document.getElementById("year").textContent = new Date().getFullYear();</script>
 </body>
 </html>
